<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PenTab_android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="settings_connect">接続設定</string>
    <string name="settings_ip">IPアドレス</string>
    <string name="settings_port">ポート</string>
    <string name="settings_pleasure">筆圧設定</string>
    <string name="settings_pleasure_use">筆圧を利用</string>

</resources>
